fix grid layout on mobile

--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -114,10 +114,12 @@
     }
 
     @media screen and (max-width: 1023px) {
+      width: calc(100% / 2);
       min-height: 0;
     }
 
     @media screen and (max-width: 767px) {
+      width: 100%;
       padding: 1rem;
 
       border-radius: 0;
